--- a/nhkplusbrowser/styles/styles.css
+++ b/nhkplusbrowser/styles/styles.css
@@ -97,3 +97,17 @@ body {
 .checkbox-container label {
   color: white;
 }
+
+.toggle-filters-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+}
+
+.toggle-filters-btn:hover {
+  background-color: #0056b3;
+}
