--- a/nhkplusbrowser/styles/styles.css
+++ b/nhkplusbrowser/styles/styles.css
@@ -59,10 +59,23 @@ body {
   margin-bottom: 40px;
 }
 
+
+.playlist-header {
+  display: flex;
+  flex-direction: row;
+}
+
+
 .playlist-header h2 {
   font-size: 24px;
   margin-bottom: 10px;
 }
+
+.playlist-header input {
+  transform: scale(2);
+  margin-right: 10px;
+}
+
 
 .grid-container {
   display: grid;
